kubernetes/applications/nocodb/noco-db/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nocodb
  labels:
    app.kubernetes.io/name: nocodb
    app.kubernetes.io/part-of: everlab
