kubernetes/applications/nocodb/noco-db/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nocodb
  namespace: nocodb
  labels:
    app.kubernetes.io/name: nocodb
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway
      sectionName: https

  hostnames:
    - nocodb.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: nocodb
          port: 8080
          weight: 1
